change values name

--- a/net-centos8.tmpl
+++ b/net-centos8.tmpl
@@ -2,9 +2,9 @@ network:
   version: 2
   renderer: networkd
   ethernets:
-    #ITF#:
+    #NETINTERFACE#:
       match:
-        macaddress: #MAC#
+        macaddress: #MACADDRESS#
       mtu: 1450
       dhcp4: no
       addresses: [#IPV4#/16]
